# eckel-stash

./: CMakeLists.txt
include/: stash.hpp
source/: main.cpp  stash.cpp
